--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
     img {
       width: 100%;
       height: 100%;
-      transform: translate(0,30px)
+      transform: translate(0,25%)
     }
   }
 }
